# fw

./: .gitignore  Makefile.bl618  setenv.sh
boards/m0pdock/: CMakeLists.txt  Makefile  flash-storage.c  sdk-usb.c  sunela.ld
hw/: backlight.c
hw/bl618/: board.h  clk.h  gpio.c  gpio.h  i2c.c  i2c.h  mmio.h  realmem.c  sha.c  spi.c  spi.h  trng.c  trng.h
hw/bl808/: board.h
